2005-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Fix profiling in builddir != srcdir builds.

2005-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_start),
	(ephy_spinner_dispose), (ephy_spinner_finalize),
	(ephy_spinner_class_init):

	Ensure the images are loaded before starting to spin.
	Should fix crashes on start/new tab.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner):

	Remove unused variable.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Sync with gnome-2-12.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner),
	(ephy_toolbar_set_show_leave_fullscreen),
	(ephy_toolbar_set_security_state),
	(ephy_toolbar_set_lock_visibility), (ephy_toolbar_set_spinning):

	Use flags to save memory for the priv struct.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_style_set), (ephy_location_entry_class_init),
	(ephy_location_entry_set_favicon),
	(ephy_location_entry_set_secure):
	* lib/widgets/ephy-location-entry.h:

	Add style properties for 'secure-[bg|fg]-color', and apply them when
	the entry is in 'secure' mode. Reset the IM context before emitting
	the 'activate' signal.

	* src/ephy-location-action.c: (sync_secure), (connect_proxy),
	(ephy_location_action_set_property),
	(ephy_location_action_get_property),
	(ephy_location_action_class_init):
	* src/ephy-toolbar.c: (ephy_toolbar_set_security_state),
	(ephy_toolbar_init):
	* src/ephy-toolbar.h:
	* src/ephy-window.c: (sync_chromes_visibility),
	(sync_tab_security):

	Set the location entry's 'secure' property on secure sites,
	and also always show the lock for secure sites.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
