@@ -1,3 +1,9 @@
+2005-10-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-shell.c:
+
+	Remove DBUS define, it's always compiled now.
+
 2005-10-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/ephy-debug.c:
